data/derived/fa15/progs/unify/prog3912.ml.out
Characters 29-32:
  let fixpoint (f,b) = wwhile ((0),b);;
                               ^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
